# advent-of-code

./: .gitignore  README.md  pyproject.toml  utils.py
_2022/_01/: day_01.py  solution.py
_2022/_02/: day_02.py
_2022/_03/: day_03.py
_2022/_04/: day_04.py
_2022/_05/: day_05.py
_2022/_06/: day_06.py
_2022/_07/: day_07.py
_2022/_08/: day_08.py
